--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "travel-buddy-backend",
   "version": "1.0.0",
   "main": "dist/server.js",
+  "prisma": {
+    "schema": "./prisma/schema/schema.prisma"
+  },
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only ./src/server.ts",
     "build": "tsc",
     "start": "node ./dist/server.js",
-    "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate dev",
-    "prisma:studio": "prisma studio"
+    "prisma:generate": "prisma generate --schema=./prisma/schema/schema.prisma",
+    "prisma:migrate": "prisma migrate dev --schema=./prisma/schema/schema.prisma",
+    "prisma:studio": "prisma studio --schema=./prisma/schema/schema.prisma"
   },
   "keywords": [],
   "author": "",
