--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "resolveJsonModule": true
   },
   "include": ["src/**/*"],
+  "typeRoots": ["./src/types", "./node_modules/@types"],
   "exclude": ["node_modules", "dist"]
 }
 
