--- a/.env.example
+++ b/.env.example
@@ -37,3 +37,8 @@ FRONTEND_URL=http://localhost:3000
 # Reset Password Link
 RESET_PASS_LINK=http://localhost:3000/reset-password
 
+
+# Stripe Configuration
+STRIPE_SECRET_KEY=sk_test_your-stripe-secret-key
+STRIPE_PUBLISHABLE_KEY=pk_test_your-stripe-publishable-key
+STRIPE_WEBHOOK_SECRET=whsec_your-stripe-webhook-secret
