--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "multer": "^2.0.2",
     "openai": "^6.3.0",
     "resend": "^4.0.0",
+    "stripe": "^20.0.0",
     "uuid": "^13.0.0",
     "zod": "^4.1.11"
   },
@@ -47,4 +48,3 @@
     "typescript": "^5.9.2"
   }
 }
-
